<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layoutCampos"
        android:baselineAligned="false">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/imgLogo"
            android:src="@mipmap/ic_logo"
            android:contentDescription="@string/ds_logotipo"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMensagem"
            android:textColor="#ffff0034"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txtLogin"
            android:ems="10"
            android:id="@+id/txtLogin"
            android:layout_marginBottom="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtSenha"
            android:hint="@string/txtSenha"
            android:layout_marginBottom="20dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkLembrar"
            android:id="@+id/chkLembrar"
            android:layout_marginBottom="20dp"
            android:textColor="#ff707070" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:id="@+id/btnLogin"
            android:clickable="true"
            android:onClick="login" />
        
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:padding="8px"
            />

    </LinearLayout>

</RelativeLayout>
