<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dip"
                android:id="@+id/txtResult"
                android:textColor="#ffffffff"
                android:padding="5dp"
                android:textSize="30sp"
                android:background="@color/result_text_wait"
                android:text="@string/scan_result_default"
                android:gravity="center"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cboSentido"
                android:prompt="@string/cbo_sentido"
                android:entries="@array/preferences_sentido"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnScan"
                android:id="@+id/button"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UTILIZAR LEITOR MANUAL"
                android:id="@+id/btnLeitor"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCodigo"
                android:layout_gravity="center_horizontal"
                android:inputType="text"
                android:maxLength="22" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDisponiveis"
                android:layout_marginTop="20dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
